Additional UI fixes (#5284)
* The click-targets on the my-netdata menu items should cover the whole row

* Correct colors for modal buttons

--- a/web/gui/main.css
+++ b/web/gui/main.css
@@ -579,7 +579,7 @@ body.modal-open {
 
 #my-netdata-dropdown-content .agent-item :nth-child(2) {
     min-width: 420px;
-    line-height: 14px;
+    line-height: 32px;
 }
 
 .agent-item--separated {
